adicionado imagens das cervejas

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					</p>
 					<img
 						alt="info 1"
-						src="./imagens/double.png"
+						src="./imagens/american pale ale.png"
 						class="img--info"
 					/>
 				</div>
@@ -150,7 +150,7 @@
 					</p>
 					<img
 						alt="info 3"
-						src="./imagens/double.png"
+						src="./imagens/brown.png"
 						class="img--info"
 					/>
 				</div>
