--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Home</title>
+		<title>Goró</title>
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="stylesheet" href="./css/header.css" />
 		<link rel="stylesheet" href="./css/info.css" />
@@ -24,12 +24,16 @@
 			<nav>
 				<ul class="nav-principal">
 					<li><a class="nav--link" href="#">INÍCIO</a></li>
-					<li><a class="nav--link" href="#">PORTFÓLIO</a></li>
 					<li>
-						<img alt="logo" src="./imagens/logo.png" class="logo" />
+						<a class="nav--link" href="#info--menu">PORTFÓLIO</a>
 					</li>
-					<li><a class="nav--link" href="#">SOBRE NÓS</a></li>
-					<li><a class="nav--link" href="#">LOJA</a></li>
+					<li>
+						<img alt="logo" src="./img/logo.png" class="logo" />
+					</li>
+					<li><a class="nav--link" href="#about">SOBRE NÓS</a></li>
+					<li>
+						<a class="nav--link" href="./home-loja.html">LOJA</a>
+					</li>
 				</ul>
 				<ul class="nav-icones">
 					<li>
@@ -57,7 +61,7 @@
 				></i>
 				<img
 					alt="banner"
-					src="./imagens/goro-cerveja.png"
+					src="./img/goro-cerveja.png"
 					id="img-banner"
 				/>
 				<div class="carousel-text">
@@ -114,7 +118,7 @@
 					</p>
 					<img
 						alt="info 1"
-						src="./imagens/american pale ale.png"
+						src="./img/american pale ale.png"
 						class="img--info"
 					/>
 				</div>
@@ -132,7 +136,7 @@
 					</p>
 					<img
 						alt="info 2"
-						src="./imagens/double.png"
+						src="./img/double.png"
 						class="img--info"
 					/>
 				</div>
@@ -148,11 +152,7 @@
 						Duis lectus augue, ultrices vel urna pharetra,
 						consectetur aliquet tellus.
 					</p>
-					<img
-						alt="info 3"
-						src="./imagens/brown.png"
-						class="img--info"
-					/>
+					<img alt="info 3" src="./img/brown.png" class="img--info" />
 				</div>
 			</section>
 		</header>
@@ -181,12 +181,12 @@
 							ultrices vel urna pharetra, consectetur aliquet
 							tellus.
 						</p>
-						<img alt="brindando" src="./imagens/image 6.png" />
+						<img alt="brindando" src="./img/image 6.png" />
 					</div>
 					<div class="coluna">
 						<img
 							alt="dois caras contemplando cerveja"
-							src="./imagens/image 1.png"
+							src="./img/image 1.png"
 						/>
 						<p>
 							Sed consequat odio at eros viverra, at ultricies
@@ -206,11 +206,7 @@
 			<hr class="preto" />
 			<div class="footer__container">
 				<div class="footer__logo">
-					<img
-						class="logo"
-						alt="Logo Goró"
-						src="./imagens/logo.png"
-					/>
+					<img class="logo" alt="Logo Goró" src="./img/logo.png" />
 				</div>
 
 				<div class="footer__inst">
